--- a/web/src/pages/timetable/timetable.css
+++ b/web/src/pages/timetable/timetable.css
@@ -4,9 +4,10 @@
 }
 .timetable .grid-container {
   display: grid;
-  justify-items: stretch;
+  grid-auto-flow: column;
+  /* justify-items: stretch; */
   grid-template-columns: 0.5fr repeat(5, 1fr);
-  grid-template-rows: 2fr repeat(28, 1fr);
+  grid-template-rows: 2fr repeat(29, 1fr);
   column-gap: 5px;
 }
 .timetable .item {
@@ -16,6 +17,12 @@
   border-style: solid;
   width: "100%";
   height: "100%";
+  padding: 5px;
+  justify-items: stretch;
+  justify-content: center;
+  justify-self: stretch;
+  text-align: center;
+  z-index: 1;
 }
 /* .timetabe grid-item1 {
   
