--- a/web/src/components/Navbar.css
+++ b/web/src/components/Navbar.css
@@ -1,4 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee&family=Heebo:wght@100&family=Playfair+Display&family=Roboto:wght@800&display=swap");
+
+.footer {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  background-color: #347072;
+  display: flex;
+  padding: 40px;
+}
+.footer .heading {
+  color: #ffe7db;
+  font-family: Playfair Display;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.footer .title {
+  padding: 20px;
+  color: #ffe7db;
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Playfair Display;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 25px; /* 65.789% */
+  letter-spacing: 0.5px;
+}
+.footer a {
+  color: #ffe7db;
+  font-family: Heebo;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+}
+.footer .column1 {
+  width: 100%;
+  padding: 50px 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer .column {
+  padding: 20px 60px;
+  display: flex;
+  flex-direction: column;
+}
 
 nav .navbar-title {
   font-size: 1.5rem;
@@ -13,6 +65,8 @@ nav .navbar-title {
   letter-spacing: 0.5px;
   padding: 0px 0px 0px 50px;
   color: #ffe7db;
+  display: flex;
+  flex-direction: row;
 }
 
 nav ul {
@@ -21,12 +75,13 @@ nav ul {
 
 nav ul li {
   list-style: none;
-  font-family: "Playfair Display", serif;
-  font-size: 27px;
-  font-style: normal;
-  font-weight: 300;
-  padding: 0px 40px;
   color: #ffe7db;
+  font-family: "Heebo", sans-serif;
+  font-size: 20px;
+  font-style: bold;
+  font-weight: 1000;
+  line-height: normal;
+  padding: 0 30px;
 }
 
 nav ul li a {
